feat: Page title

--- a/pt/theme/index.hbs
+++ b/pt/theme/index.hbs
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>{{ title }}</title>
+        <title>{{ book_title }}</title>
         {{#if is_print }}
         <meta name="robots" content="noindex" />
         {{/if}}
